--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -28,8 +28,113 @@
                 </div>
                 <div class="bell">
                     <i class="fas fa-bell"></i>
+                </div>
+                <div class="profile-pic">
+                    <img src="images/kgROq9X9SAFAuUq8sQ408haki2xbGugmpgRl5Ysx-972x597.jpeg" alt="Profile Pic">
                 </div>   
             </div>
     </header>
+
+    <aside class="queue">
+        <h2 class="queue-head">Queue</h2>
+        <ul class="queue-list">
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+            <li class="list-item">
+                <div class="item1"><img src="images/aside-images/1.jpg" alt="" class="queue-album"></div>
+                <div class="item2">
+                    <div class="item-name">Mirrage</div>
+                    <div class="item-author">Flame</div>
+                </div>
+                <div class="item3"><i class="far fa-heart"></i></div>
+            </li>
+        </ul>
+    </aside>
+
+    <section class="card">
+        <div class="card-1 card-item"><img src="images/Card/1.jpg" class="card-img card-item-1" alt=""></div>
+        <div class="card-2 card-item"><img src="images/Card/2.jpg" class="card-img card-item-2" alt=""></div>
+        <div class="card-3 card-item"><img src="images/Card/3.jpg" class="card-img card-item-3" alt=""></div>
+    </section>
+
+    <section class="release-sec">
+        <div class="release-sec-item">
+            <div class="release-sec-item-1">
+                 
+            </div>
+            <div class="release-sec-item-2"></div>
+        </div>
+        <div class="release-sec-item"></div>
+    </section>
 </body>
 </html>
